--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,6 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+# Flipper version
+FLIPPER_VERSION=0.182.0
