--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-permissions": "^5.4.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.15.2",
     "react-native-sqlite-storage": "^6.0.1",
@@ -34,6 +40,7 @@
     "@react-native/typescript-config": "0.81.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
